--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <img id="night" class="d-none col-3 col-md-1" src="images/switch.png" alt="">
     <img id="day" class=" col-3 col-md-1" src="images/toggle.png" alt="">
 </nav>
+<div class="footer p-2">
+    <p class="text-center">Made by Zeeshan Mehmood</p>
+</div>
 <div class="container my-5">
     <form class="row justify-content-center my-5">
         <div class=" col-10 col-lg-8 form-outline" data-mdb-input-init>
